# codetracer-shell-recorders

./: .gitignore  AUDIT-CTFS-2026-05.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  flake.nix  repro.nim  result  rust-toolchain.toml
.github/: sibling-pins.json  sibling-repos
.github/workflows/: ci-reprobuild.yml  ci.yml  cross-repo-tests.yml
bash-recorder/: README.md  codetracer-bash-recorder  launcher.sh  recorder.sh
crates/ct-shell-trace-writer/: Cargo.toml
crates/ct-shell-trace-writer/src/: lib.rs  main.rs  trace_bridge.rs  wire_protocol.rs
crates/ct-shell-trace-writer/tests/: bash_recording_test.rs  integration_test.rs  zsh_recording_test.rs
scripts/: run-cross-repo-tests.sh
tests/: test_bash_recorder_cli.sh  test_zsh_recorder_cli.sh  verify-cli-convention-no-silent-skip.sh
tests/fixtures/bash/: comprehensive.sh  errors.sh  functions.sh  multiline.sh  nested_functions.sh  output.sh  simple.sh  sourced_lib.sh  variables.sh  with_source.sh
tests/fixtures/cross_shell/: equivalent.sh  equivalent.zsh
tests/fixtures/zsh/: comprehensive.zsh  errors.zsh  functions.zsh  output.zsh  simple.zsh  variables.zsh  with_source.zsh  zsh_sourced_lib.zsh
zsh-recorder/: README.md  codetracer-zsh-recorder  launcher.zsh  recorder.zsh
