[package]
name = "ct-shell-trace-writer"
version = "0.1.0"
edition = "2021"
description = "CodeTracer shell recorder — reads debugger wire-protocol events from stdin and writes a CodeTracer trace"

[lib]
name = "ct_shell_trace_writer"
path = "src/lib.rs"

[[bin]]
name = "ct-shell-trace-writer"
path = "src/main.rs"

[dependencies]
codetracer_trace_types = { version = "0.16", path = "../../../codetracer/libs/codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_writer = { version = "0.17", path = "../../../codetracer/libs/codetracer-trace-format/codetracer_trace_writer" }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
