[package]
name = "ct-shell-trace-writer"
version = "0.1.0"
edition = "2021"
description = "CodeTracer shell recorder — reads debugger wire-protocol events from stdin and writes a CodeTracer trace"

[lib]
name = "ct_shell_trace_writer"
path = "src/lib.rs"

[[bin]]
name = "ct-shell-trace-writer"
path = "src/main.rs"

[dependencies]
codetracer_trace_types = { version = "0.16", path = "../../../codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_writer_nim = { path = "../../../codetracer-trace-format/codetracer_trace_writer_nim" }
# The Rust-native trace writer is used for --format binary (CBOR+Zstd)
# since the Nim writer always produces CTFS containers, which the
# db-backend's seek-based reader does not support yet (M37).
codetracer_trace_writer = { path = "../../../codetracer-trace-format/codetracer_trace_writer" }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
